small javadoc corrections (#803)